Docker用の設定を追加する